se sube la prueba tecnica completa

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -68,7 +68,7 @@
             </div>
           </div>
 
-          <div class="Union">
+          <div class="resultado">
             <div class="abs-center " style="height: 20px; background-color: rgb(110, 215, 204);  width: {{((super.like * 100)/(super.like+super.dislike)).toFixed()}}%">{{super.like}}%</div>
             <div class="abs-center " style="height: 20px; background-color: rgb(212, 163, 27); width: {{ ((super.dislike * 100)/(super.like+super.dislike)).toFixed() }}%;">{{super.dislike}}%</div>
           </div>
@@ -122,7 +122,7 @@
               <button class="buttonStyle"> Ver detalle </button>
             </div>
           </div>
-          <div class="Union">
+          <div class="resultado">
             <div class="bueno abs-center " width="64%">{{super.like}}%</div>
             <div class="abs-center " style="height: 20px; background-color: rgb(212, 163, 27); width: 36%">{{super.dislike}}%</div>
           </div>
