--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -106,7 +106,7 @@
     margin-right: 10px;
 }
 
-.Union{
+.resultado{
     display: flex;
     width: 100%; 
     border: 0px solid black; 
@@ -134,7 +134,7 @@
         margin-bottom: 5px;
     }
 
-    .Union{
+    .resultado{
         width: 100%;
     }
 
