se sube la prueba tecnica completa

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -83,15 +83,16 @@
 
 
     <!--Inicio body cards-->
-    <div class="bodyCards bg-light mt-4">
-      <h2 class="titulo2 m-2">
+    <div style="background-color: rgba(0, 0, 0, 0.2);" >
+      <h2 class="titulo2 m-2" >
         Lorem Ipsum. Dolor
         <h1 class="titulo1">
           IP lorem ip.
         </h1>
       </h2>
-      <div class="">
-      <h3 class="texto ">
+      <div class="texto">
+      <h3 class="texto " >
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta nemo dolores temporibus tenetur nihil. Voluptas vero tempore vitae.
       Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta nemo dolores temporibus tenetur nihil. Voluptas vero tempore vitae.
       </h3>
       </div>
